<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SharkNetAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_contacts">ContactsActivity</string>

    <string name="action_contacts">Contacts</string>
    <string name="action_chats">Chats</string>
    <string name="action_radar">Radar</string>
    <string name="action_messages">Messages</string>
    <string name="action_interests">Interests</string>
    <string name="action_security">Security Setting</string>
    <string name="action_settings">Other Settings</string>

</resources>
